--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                    <li><a href="https://news.google.com/topstories?hl=en-IN&gl=IN&ceid=IN:en"target="_blank">News</a></li>
                    <li><a href="https://www.google.com/maps/@18.528205,73.9292465,12.22z"target="_blank">Destination</a></li>
                    <li><a href="https://masterblogging.com/best-travel-blogs/"target="_blank">Blog</a></li>
-                   <li><a href="http://127.0.0.1:5500/contact.html"target="_blank">Contact</a></li>
+                   <li><a href="https://github.com/Sahil-Mandhare/New-tourism/blob/main/contact.html"target="_blank">Contact</a></li>
                </ul>
            </div>
            <script>
